* 2015.10.21 - * fixing pencil description from CARP project

* 2015.09.25 - * renaming soft:compiler.mcl to compiler.msvc (for Microsoft C compilers)
                 (suggested by Anton)

* 2015.09.17 - * automatically calculating integer soft version for internal comparisons

* 2015.09.10 - * adding 'platform.init' module to share scripts and tools that can initialize a given platform

* 2015.08.24 - * adding support to detect Windows 10 ...

* 2015.08.11 - * fixing bug with detection of standard Linux

* 2015.08.09 - * fixing stupid bug with Y/N when installing packages automatically (detected by Cedric)
               * fixing "ck show env" when using tags and target_os -> was no comma separating sub-tags

* 2015.08.07 - fixed a small bug with setting environment for a given target OS