@@ -1,0 +1,20 @@
+{
+  "backup_data_uid": "433d85323a5e077d", 
+  "backup_module_uid": "5e1100048ab875d7", 
+  "backup_module_uoa": "soft", 
+  "control": {
+    "author": "Grigori Fursin", 
+    "author_email": "Grigori.Fursin@cTuning.org", 
+    "author_webpage": "http://fursin.net", 
+    "copyright": "See CK COPYRIGHT.txt for copyright details", 
+    "engine": "CK", 
+    "iso_datetime": "2015-03-06T17:35:32.054000", 
+    "license": "See CK LICENSE.txt for licensing details", 
+    "version": [
+      "1", 
+      "1", 
+      "0205"
+    ]
+  }, 
+  "data_name": "bench.pencil"
+}
